2002-04-09  Anders Carlsson  <andersca@gnu.org>

	* libgnome/gnome-url.c (gnome_url_show): Don't use a shell,
	just launch the url handler directly. Fixes #73781.
	
	* help-converters/man/Makefile.am:
	* help-converters/man/gnome-man2html.c: (main):
	Use g_snprintf instead of snprintf which apparently needs
	-ldb to work on OSF/1 4.0 (#78166, Gareth Pearce).
	
2002-04-09  Anders Carlsson  <andersca@gnu.org>

	* message-of-doom:
	* Makefile.am:
	Remove message-of-doom file, I think we're stable enough now.
	
	* configure.in:
	* libgnome/Makefile.am:
	Add proper libtool versioning.

	* libgnome/test-libgnome.c:
	Remove this program.

2002-04-08  Anders Carlsson  <andersca@gnu.org>

	* gnome-data/Makefile.am: Add intltool support for our .soundlist
	files. Fixes #76753.

	* libgnome/gnome-score.c: Add patch from Andrey Panov that makes
	the score files use real names instead of login names. (#75197).

	* libgnome/Makefile.am (test_libgnome_LDADD): Add LIBGNOME_LIBS,
	hopefully fixing #73050.

	* libgnome/gnome-url.h: #include <glib/gerror.h>.

	* libgnome/gnome-macros.h: Move #include into the #ifndef so the
	file gets to be properly guarded. Fixes #71406 reported by
	Morten Welinder.

2002-04-07  Philip Langdale  <philipl@mail.utexas.edu>

	* help-converters/info/html.c: Uncommented code that generated
	header for html (including the page title). No idea why this
	was commented out. Fixes bug #64495

2002-04-04  Anders Carlsson  <andersca@gnu.org>

	* libgnome/gnome-init.c: Make --version work, thanks to Stephen
	Browne for noticing.

2002-03-29  Lauris Kaplinski  <lauris@ximian.com>

	* schemas/gnome_url_handler.schemas: Updated schema, originally
	by Bradford Hovinen.

	* libgnome/gnome-url.c (gnome_url_show): Update key name to match
	schema
	(gnome_url_default_handler): Update key names to match schemas

2002-03-29  Jody Goldberg <jody@gnome.org>

	* schemas/desktop_gnome_accessibility_keyboard.schemas : Dear lord I